# HET

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  builtin.sh  gc.c  gc.h  het.c  khash.h  kvec.h  lib.hetx  memory.c  memory.h  rmalloc.c  rmalloc.h  tut.het  tut.hetx  tut.in1  tut.in2  tut.out  unit.het  unit.out  vector.h
.github/workflows/: cmake.yml
doc/: FIB.md  HET.md
src/: add.c  gc.c  get.c  less.c  mul.c  put.c  putch.c  stack.c  sub.c  unstack.c
